--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,7 +1,12 @@
 body {
+    flex-direction : column;
     margin         : 0;
     height         : 100vh;
     display        : flex;
     justify-content: center;
     align-items    : center;
+}
+
+button {
+    margin: 20px;
 }
