man this chart library is so fancy

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -10,3 +10,19 @@ body {
 button {
     margin: 20px;
 }
+
+.chartWrapper {
+    position: relative;
+   }
+   
+   .chartWrapper > canvas {
+     position: absolute;
+     left: 0;
+     top: 0;
+     pointer-events: none;
+   }
+   
+   .chartAreaWrapper {
+     width: 600px;
+     overflow-x: scroll;
+   }
