--- a/docs/styles.css
+++ b/docs/styles.css
@@ -39,6 +39,9 @@ button {
   border       : 0;
   outline      : none;
   font-size    : inherit;
+  font-family  : -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI emoji;
+  width        : 50px;
+  padding      : 4px;
 }
 
 nav {
