--- a/docs/styles.css
+++ b/docs/styles.css
@@ -5,6 +5,7 @@ body {
   display        : flex;
   justify-content: center;
   align-items    : center;
+  font-family    : -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI emoji;
 }
 
 button {
@@ -28,12 +29,11 @@ button {
 }
 
 #setpointField {
-  width        : 40px;
+  text-align   : center;
   border-bottom: 2px solid #a8cc10 !important;
   height       : 1em;
   margin       : 0;
   box-shadow   : none;
-  padding      : 0;
   overflow     : hidden;
   inset        : 0;
   border       : 0;
@@ -47,4 +47,8 @@ button {
 nav {
   display    : flex;
   align-items: center;
+}
+
+form {
+  margin-left: 20px;
 }
